# conlangmod

./: CMakeLists.txt  ConLangMod.md  README.md  build_clm_test.sh  build_vcb_test.sh  conlangmod_doxy_conf  outline.md  tags
.cache/clangd/index/: arena.c.FC3C34D9D56563AA.idx  com.cpp.BB1F593AE612C870.idx  com.h.6AD1098233AA5820.idx  cond.c.34963BCD947D70A0.idx  condition.cpp.A3F16B22E17CE183.idx  condition.h.D2DEE3065B3A66C8.idx  domain.cpp.4B394E941797EF57.idx  domain.h.88549ED9132F7B21.idx  hashtable.c.33592353D6D5982C.idx  list.c.B3ACBFFBE84F2A53.idx  st.c.3E0ECEF10ABAFAAA.idx  st_Exception.cpp.CFCF280808DE3B8A.idx  st_Exception.h.23A2D0CCEB150C3C.idx  st_Object.cpp.6C3FC71B15D328B1.idx  st_Object.h.0FEEED91AB0147B5.idx  st_string.cpp.0413852C02AB3B38.idx  st_string.h.11680C768320C641.idx  system_hash.c.C2ADB884C5311692.idx  value.c.B9B696B15FF190CC.idx  var.c.CC6557E6A47D8790.idx  var.cpp.F76474A70C22F10B.idx  var.h.D10F88EF7D33F55B.idx  vcb.h.6B1C668788E4B406.idx  vcb_test.c.381040E3305FFAF7.idx  vcb_test.cpp.85A063BDB166AD56.idx
data/format_example_language/: vars_raw  vars_tree
docs/: structure
docs/html/: annotated.html  annotated_dup.js  classCom-members.html  classCom.html  classCondition-members.html  classCondition.html  classDomain-members.html  classDomain.html  classSound-members.html  classSound.html  classSubvalue-members.html  classSubvalue.html  classVar-members.html  classVar.html  classVar.js  classes.html  classst__Exception-members.html  classst__Exception.html  classst__Object-members.html  classst__Object.html  com_8h_source.html  condition_8h_source.html  dir_174617bd1d7ee21aa72f56aea246e224.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6e9a6da2c7e4a6c456ccabb42c2d8f90.html  dir_6e9a6da2c7e4a6c456ccabb42c2d8f90.js  dir_8b43051b70df3b27a0a2c904e37fa078.html  dir_8b43051b70df3b27a0a2c904e37fa078.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_faa72b77d82d31200724b3e4832c7275.html  dir_faa72b77d82d31200724b3e4832c7275.js  domain_8h_source.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  (+26 more)
docs/latex/: annotated.tex  classCom.tex  classCondition.tex  classDomain.tex  classSound.tex  classSubvalue.tex  classVar.tex  classst__Exception.tex  classst__Object.tex  com_8h_source.tex  condition_8h_source.tex  dir_6e9a6da2c7e4a6c456ccabb42c2d8f90.tex  dir_8b43051b70df3b27a0a2c904e37fa078.tex  domain_8h_source.tex  files.tex  group__accessor.tex  group__constructors.tex  group__file.tex  group__mutators.tex  refman.tex  st__Exception_8h.tex  st__Exception_8h_source.tex  st__Object_8h_source.tex  st__string_8h.tex  st__string_8h_source.tex  topics.tex  var_8cpp_source.tex  var_8h.tex  var_8h_source.tex
include/clm/: clm.h
include/st/: st_Exception.h  st_string.h
include/vcb/: com.h  condition.h  domain.h  st_Object.h  var.h  vcb.h
include/vcb_c/: vcb.h
src/: sound.cpp
src/clm/: phonetics.cpp
src/st/: st_Exception.cpp  st_string.cpp
src/vcb/: arena.c  bomb.c  com.c  com.cpp  cond.c  condition.cpp  domain.c  domain.cpp  hashtable.c  list.c  object.c  st.c  st_Object.cpp  system_hash.c  var.c  var.cpp
src/vcb_c/: arena.c  com.c  cond.c  domain.c  hashtable.c  list.c  morph.c  object.c  st.c  system_hash.c  value.c  var.c
tests/: clm_test.cpp  vcb_test.c  vcb_test.cpp
(+34 files in other folders)
